<resources>
    <string name="app_name">TreasureHunt</string>

    <!-- 홈 액티비티 -->
    <string name="bnv_menu_home">홈</string>
    <string name="bnv_menu_my">MY</string>

    <!-- 홈 지도 화면 -->
    <string name="home_map">지도</string>
    <string name="home_feed">피드</string>
    <string name="home_map_tiet_search_place_hint">보물찾기할 장소를 검색해 보세요</string>

    <!-- 지도 다이얼로그 -->
    <string name="map_prompt">%1$s를 보물상자로 지정할까요?</string>
    <string name="map_answer_visit">네, 가봤어요</string>
    <string name="map_answer_plan">네, 가볼래요</string>
    <string name="map_answer_no">아니요</string>

    <!-- 지도 장소 검색 화면 -->
    <string name="search_map_place_unknown">?</string>

    <!-- 로그인 화면 -->
    <string name="login_naver">네이버로 계속하기</string>
    <string name="login_non_member">비회원으로 로그인</string>
    <string name="login_treasure_hunt">보물찾기</string>
    <string name="login_naver_login_error">네이버로 계속하기 실패. 잠시 후 다시 시도해 주세요.</string>
    <string name="login_guest_login_error">비회원으로 로그인 실패. 잠시 후 다시 시도해 주세요.</string>

    <!-- 기록 저장 화면 -->
    <string name="savelog_tv_title">내 추억</string>
    <string name="savelog_ib_cancel">작성 중인 글을 취소하는 버튼입니다.</string>
    <string name="savelog_tv_text">글</string>
    <string name="savelog_tv_photo">사진 (0/5)</string>
    <string name="savelog_tv_photo_count">사진 (%1$d/5)</string>
    <string name="savelog_btn_save">저장</string>록
    <string name="savelog_sb_warning_count">사진은 5개까지만 등록 가능합니다.</string>
    <string name="savelog_sb_upload_success">사진 업로드 (%1$d/%2$d)</string>
    <string name="savelog_sb_upload_failure">사진 업로드 실패</string>

    <!-- 기록 저장 화면 - 백그라운드 -->
    <string name="savelog_image_upload_notification_title">업로드 알리미</string>
    <string name="savelog_image_upload_notification_progress">업로드 진행 중</string>
    <string name="savelog_image_upload_notification_success">업로드 성공</string>
    <string name="savelog_image_upload_notification_fail">업로드 실패</string>

    <!-- 기록 상세 화면 -->
    <string name="logdetail_content">Check out Treasure Hunt: %s</string>
    <string name="logdetail_chooser_title">내용 공유하기</string>
    <string name="logdetail_log_still_loading_message">데이터를 불러오는 중입니다. 잠시 후 다시 시도해 주세요</string>
    <string name="logdetail_log_deleted_message">기록이 삭제되었습니다</string>
    <string name="logdetail_error_message">문제가 생겨 잠시 후 다시 시도해 주세요</string>

    <!-- 프로필 화면-->
    <string name="profile_tv_nickname">닉네임</string>
    <string name="profile_tv_account">abc@naver.com</string>
    <string name="profile_tv_cancel">취소</string>
    <string name="profile_tv_complete">완료</string>
    <string name="profile_tl_friend">친구</string>
    <string name="profile_tl_comment">댓글</string>
    <string name="profile_tl_tag">태그</string>
    <string name="profile_check_url">https://</string>
    <string name="profile_guest">비회원</string>

    <!-- 프로필 화면 - 친구 -->
    <string name="profile_friend_tiet_search_friend_hint">이메일로 친구를 검색해 보세요</string>
    <string name="profile_friend_btn_hide_search_result">검색 끝</string>
    <string name="profile_friend_tv_no_search_result">해당 문자열로 시작되는\n이메일 계정이 없습니다</string>
    <string name="profile_friend_added">%1$s님을 친구로 추가했습니다</string>
    <string name="profile_friend_removed">%1$s님을 친구에서 삭제했습니다</string>
    <string name="profile_friend_tv_alert_guest">회원으로 로그인하면,\n친구들과 함께할 수 있어요!</string>

    <!-- 피드 화면 -->
    <string name="no_treasure">아직 보물이 없어요</string>
    <string name="feed_footer_retry">재시도</string>
    <string name="feed_no_treasure">아직 보물이 없어요</string>

    <!-- 알림 -->
    <string name="notification_channel">Upload</string>
    <string name="notification_description">데이터 업로드가 완료될 때, 알림을 보냅니다</string>

    <!-- 설정 화면 -->
    <string name="setting_tv_setting">설정</string>
    <string name="setting_tv_login">자동로그인</string>
    <string name="setting_tv_logout">로그아웃</string>
    <string name="setting_tv_user_delete">회원탈퇴</string>
    <string name="setting_tv_conversion_account">회원전환</string>
    <string name="setting_sb_auto_login_checked">자동로그인이 설정 되었습니다</string>
    <string name="setting_sb_auto_login_unchecked">자동로그인이 설정 해제 되었습니다</string>
    <string name="setting_sb_not_conversion_account">비회원이 아닙니다</string>

    <!-- 회원 탈퇴 다이얼로그 -->
    <string name="delete_user_tv_warning_title">정말 회원 탈퇴 하시겠습니까?</string>
    <string name="delete_user_btn_cancel">아니요</string>
    <string name="delete_user_btn_delete">네, 삭제할래요</string>
    <string name="delete_user_sb_delete_user_error">회원탈퇴 할 수 없습니다. 로그인 후 다시 시도해 주세요.</string>

    <!-- 회원 전환 다이얼로그 -->
    <string name="conversion_account_tv_warning_title">정말 회원 전환 하시겠습니까?</string>
    <string name="conversion_account_btn_cancel">아니요</string>
    <string name="conversion_account_btn_account_conversion">네, 전환할래요</string>
    <string name="conversion_account_sb_has_naver_account">네이버 계정이 존재합니다</string>
</resources>