<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/ib_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_left_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_setting"
        style="@style/SettingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/setting_tv_setting"
        app:layout_constraintBottom_toBottomOf="@+id/ib_back"
        app:layout_constraintStart_toEndOf="@+id/ib_back"
        app:layout_constraintTop_toTopOf="@+id/ib_back" />

    <ImageView
        android:id="@+id/iv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_person"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ib_back" />

    <TextView
        android:id="@+id/tv_login"
        style="@style/Font.SettingLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:fontFamily="@font/pretendard"
        android:text="@string/setting_tv_login"
        app:layout_constraintBottom_toBottomOf="@+id/iv_login"
        app:layout_constraintStart_toEndOf="@+id/iv_login"
        app:layout_constraintTop_toTopOf="@+id/iv_login" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/sw_auto_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_login" />

    <ImageView
        android:id="@+id/iv_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_logout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_login" />

    <Button
        android:id="@+id/btn_logout"
        style="@style/Font.SettingLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/pretendard"
        android:padding="0dp"
        android:text="@string/setting_tv_logout"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="@+id/iv_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_logout"
        app:layout_constraintTop_toTopOf="@+id/iv_logout" />

    <ImageView
        android:id="@+id/iv_user_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_user_delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logout" />

    <Button
        android:id="@+id/btn_user_delete"
        style="@style/Font.SettingLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/pretendard"
        android:padding="0dp"
        android:text="@string/setting_tv_user_delete"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="@+id/iv_user_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_user_delete"
        app:layout_constraintTop_toTopOf="@+id/iv_user_delete" />

</androidx.constraintlayout.widget.ConstraintLayout>