<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.treasurehunt.ui.profile.ProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.profile.ProfileFragment">

        <ImageButton
            android:id="@+id/ib_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_setting"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view_container"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_record"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ib_setting" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_profile_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@+id/view_container"
            app:layout_constraintStart_toStartOf="@+id/view_container"
            app:layout_constraintTop_toTopOf="@+id/view_container"
            app:shapeAppearance="@style/ProfileImage" />

        <ImageButton
            android:id="@+id/ib_camera"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_camera"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/iv_profile_image"
            app:layout_constraintTop_toTopOf="@+id/iv_profile_image" />

        <TextView
            android:id="@+id/tv_nickname"
            style="@style/Font.ProfileNickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/iv_profile_image"
            app:layout_constraintTop_toTopOf="@+id/iv_profile_image"
            tools:text="@string/profile_tv_nickname" />

        <EditText
            android:id="@+id/et_nickname"
            style="@style/Font.ProfileNickname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_record"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@id/iv_profile_image"
            app:layout_constraintTop_toTopOf="@id/iv_profile_image"
            tools:text="@string/profile_tv_nickname" />

        <TextView
            android:id="@+id/tv_account"
            style="@style/Font.ProfileAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            app:layout_constraintStart_toEndOf="@+id/iv_profile_image"
            app:layout_constraintTop_toTopOf="@+id/iv_profile_image"
            tools:text="@string/profile_tv_account" />

        <ImageButton
            android:id="@+id/ib_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_edit"
            app:layout_constraintEnd_toEndOf="@+id/view_container"
            app:layout_constraintTop_toTopOf="@+id/view_container" />

        <TextView
            android:id="@+id/tv_cancel"
            style="@style/Font.ProfileAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/profile_tv_cancel"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/tv_completed"
            app:layout_constraintTop_toTopOf="@+id/tv_completed" />

        <TextView
            android:id="@+id/tv_completed"
            style="@style/Font.ProfileAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/profile_tv_completed"
            android:textColor="@color/blue"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/view_container"
            app:layout_constraintTop_toTopOf="@+id/view_container" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tl_notification"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_container"
            app:tabIndicatorColor="@color/blue"
            app:tabIndicatorFullWidth="true"
            app:tabRippleColor="@null"
            app:tabSelectedTextColor="@color/blue"
            app:tabTextColor="@color/gray_200">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_tl_friend" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_tl_comment" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_tl_tag" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vp_notification"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tl_notification" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>